--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-file-uploader": "^2.4.4",
     "react-router": "^6.22.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
